# servers

./: .gitignore  README.md  STORAGE_SETUP.md  conftest.py  pyproject.toml
components/: side_menu.py
pages/: account_page.py  base_page.py  contact_page.py  contact_page_edit.py  dashboard_page.py  login_page.py  main_page.py  new_contact_page.py
tests/: conftest.py  test_login.py
tests/account/: conftest.py  test_account_page_opened.py
tests/account/subscriptions/: conftest.py
tests/login/: __init__.py  conftest.py  test_error_icons_not_visible_initially.py  test_password_field_masking.py  test_successful_login_with_valid_credentials.py  test_unsuccessful_login_with_both_fields_empty.py  test_unsuccessful_login_with_empty_email.py  test_unsuccessful_login_with_empty_password.py  test_unsuccessful_login_with_invalid_credentials.py
tests/logout/: test_logout_allows_re_login.py  test_logout_clears_form_fields.py  test_logout_prevents_dashboard_access.py  test_logout_redirects_to_login.py
tests/side_bar/: conftest.py
tests/side_bar/account_settings/: test_account_settings.py
tests/side_bar/cloud_servers/: conftest.py  test_cloud_servers_group.py  test_create_and_manage.py  test_images.py  test_snapshots_and_backups.py  test_volumes.py
tests/side_bar/cloud_storage/: test_cloud_storage.py
tests/side_bar/enterprize_bare_metal/: conftest.py  test_enterprize_bare_metal_group.py  test_manage_link.py  test_order_link.py
tests/side_bar/firewalls/: test_firewalls.py
tests/side_bar/identity_and_access/: conftest.py  (+3 more)
utils/: custom_expect.py  webdriver.py
(+28 files in other folders)
